objects/CLASS_SFDC_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Class_Average__c</fullName>
        <formula>(value(text( Ques1Rating__c )) + value(text( Ques2Rating__c )) + value(text( Ques3Rating__c )) ) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SFDC_Class__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Class__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>ClassroomStaff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ques1Rating__c</fullName>
        <label>1. How do you rate the instructor?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ques2Rating__c</fullName>
        <label>2. How do you rate the class materials?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ques3Rating__c</fullName>
        <label>3. How do you rate the class materials?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVAL-{0000}</displayFormat>
        <label>CLASS_SFDC_Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>